2004-01-11  David Sheldon <dave-mono@earth.li>

 * DateTime.cs: Correct processing of formats with multiple '-'s, fixing bug
  52274

2004-01-10  Zoltan Varga  <vargaz@freemail.hu>

	* AppDomain.cs: Keep track of type resolve and assembly resolve 
	events in progress to prevent infinite recursion.

2004-01-06  Miguel de Icaza  <miguel@ximian.com>

	* Console.cs: Test for UTF-8 being present anywhere on the
	string, also do ToUpper instead of ToLower, which will work even
	around the ICU bug with different locales (#52065), and addresses #52101

2004-01-05  Zoltan Varga  <vargaz@freemail.hu>

	* Environment.cs: Bump version.

2003-12-24 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Type.cs (IsNotPublic): One would normally assume that
	IsNotPublic == !IsPublic, but this is not the case (note to MS,
	make better names ;-). Fixes #52547, `Type.IsNotPublic not 
	correct for Nested types'

2003-12-24  Nick Drochak  <ndrochak@ieee.org>

	* Array.cs (CreateInstance): Throw NullRef exception like .NET 1.1, 
	even though docs say it should be an ArgumentNull. Sent email to MS
	about this "bug".

2003-12-23  Lluis Sanchez Gual  <lluis@ximian.com>

	* Exception.cs: Several changes to make it compatible with MS.NET (needed
	for remoting interoperability): set a default value for hresult, added 
	initialization of class_name, serialization field RemoteStackTrace must
	be RemoteStackTraceString, added ser. field ExceptionMethod.

	* IndexOutOfRangeException.cs: Added serialization constructor.

2003-12-22  Bernie Solomon  <bernard@ugsolutions.com>

	* Int32 (Parse):
	  Int64 (Parse): Fix overflow checking for AllowHexSpecifier

2003-12-20  Zoltan Varga  <vargaz@freemail.hu>

	* MonoType.cs (GetMethodImpl): Only call FindMostDerivedMatch if the
	user supplied no parameter info, but not when the user supplied an
	empty parameter list. This fixes IKVM.

	* Environment.cs: Bump corlib version.

2003-12-19  Dick Porter  <dick@ximian.com>
